--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to MAYANK OpenShift</title>
+  <title>Welcome to Sandeep OpenShift</title>
 
 
 <style>
@@ -223,6 +223,7 @@ pre {
         <div class="row">
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
+              <h1> Lets do manual Build </h1>
               <h2>How to use this example application</h2>
                 <p>For instructions on how to use this application with OpenShift, start by reading the <a href="http://docs.okd.io/latest/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
 
