--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to Sandeep OpenShift</title>
+  <title>Welcome to Sandeep OpenShift check</title>
 
 
 <style>
